generate x axis scale and draw it on canvas

--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <link rel="stylesheet" href="./styles.css">
+    <script defer src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script defer src="./script.js"></script>
 
     <title>Visualize Data with a Scatterplot Graph</title>
 </head>
 
 <body>
-
+    <main>
+        <h1 id="title">Doping in Professional Bicycle Racing</h1>
+        <p>35 Fastest times up Alpe d'Huez</p>
+        <svg id="canvas"></svg>
+    </main>
 </body>
 
 </html>
