--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
     <link rel="stylesheet" href="./styles.css">
     <script defer src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script defer src="./script.js"></script>
@@ -18,6 +18,12 @@
         <h1 id="title">Doping in Professional Bicycle Racing</h1>
         <p>35 Fastest times up Alpe d'Huez</p>
         <svg id="canvas"></svg>
+        <div id='legend'>
+            YEAR (x) vs TIME (Y) </br />
+            Orange = Doping Allegation |
+            Green = No Doping Allegations
+        </div>
+        <div id='tooltip'></div>
     </main>
 </body>
 
